--- a/src/tdata/devEnv/config.json
+++ b/src/tdata/devEnv/config.json
@@ -1,6 +1,6 @@
 {
-    "url": "http://crmtg-dev.go.xltec.cc/",
-    "username": "wumao_admin2",
+    "url": "http://dev.go.xltec.cc/",
+    "username": "wumao_admin",
     "password": "123456"
   }
 
