--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,29 @@
+astroid==1.5.3
+autopep8==1.3.2
+beautifulsoup4==4.6.0
+bs4==0.0.1
+certifi==2018.1.18
+chardet==3.0.4
+html-testRunner==1.1.1
+idna==2.6
+isort==4.2.15
+Jinja2==2.9.5
 json2html==1.2.1
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
 mysql-connector==2.1.6
 mysqlclient==1.3.12
+py==1.4.34
+pycodestyle==2.3.1
+pylint==1.7.2
 PyMySQL==0.8.0
-selenium==3.5.0
-
+pytest==3.2.1
+pytest-html==1.15.2
+pytest-metadata==1.5.0
+requests==2.18.4
+selenium==3.11.0
+six==1.10.0
+urllib3==1.22
+wrapt==1.10.11
+xpath-generator==0.2
